--- a/3 - kNN/3 - kNN.ipynb
+++ b/3 - kNN/3 - kNN.ipynb
@@ -463,7 +463,7 @@
    "source": [
     "**ANOMALY:**\n",
     "\n",
-    "The single-loop KNN implementation registered the longest execution time; it was slower than the double-loop KNN implementation. This notebook was run on a machine with the following specifications:\n",
+    "The single-loop kNN implementation registered the longest execution time; it was slower than the double-loop kNN implementation. This notebook was run on a machine with the following specifications:\n",
     "- **Processor:** Intel<sup>&reg;</sup> Core<sup>TM</sup> i3-7100U CPU @ 2.40 GHz\n",
     "- **Memory:** 32.0 GB\n",
     "- **Operating System:** Windows 10 (64-bit)\n",
@@ -591,7 +591,7 @@
     "        y_train_batch = np.concatenate((y_train_folds[:i] + y_train_folds[i + 1:]))\n",
     "        y_validation_fold = y_train_folds[i]\n",
     "        \n",
-    "        # Run the KNN classifier.\n",
+    "        # Run the kNN classifier.\n",
     "        classifier.train(X_train_batch, y_train_batch)\n",
     "        dists = classifier.compute_distances_no_loops(X_validation_fold)\n",
     "        y_validation_pred = classifier.predict_labels(dists, k)\n",
