Revise comments (k-fold cross validation)

--- a/3 - kNN/3 - kNN.ipynb
+++ b/3 - kNN/3 - kNN.ipynb
@@ -602,7 +602,7 @@
     "        \n",
     "        accuracies.append(accuracy)        \n",
     "        \n",
-    "    # Store the accuracy in the dictionary.\n",
+    "    # Store the accuracies in the dictionary.\n",
     "    k_to_accuracies[k] = accuracies\n",
     "### END CODE HERE ###\n",
     "\n",
