Revise comments (k-fold cross-validation)

--- a/3 - kNN/3 - kNN.ipynb
+++ b/3 - kNN/3 - kNN.ipynb
@@ -584,25 +584,25 @@
     "    accuracies = []\n",
     "    \n",
     "    for i in range(num_folds):\n",
-    "        # Prepare the training data and the validation set.\n",
+    "        # Prepare the training data and the validation set\n",
     "        X_train_batch = np.concatenate((X_train_folds[:i] + X_train_folds[i + 1:]))\n",
     "        X_validation_fold = X_train_folds[i]\n",
     "        \n",
     "        y_train_batch = np.concatenate((y_train_folds[:i] + y_train_folds[i + 1:]))\n",
     "        y_validation_fold = y_train_folds[i]\n",
     "        \n",
-    "        # Run the kNN classifier.\n",
+    "        # Run the kNN classifier\n",
     "        classifier.train(X_train_batch, y_train_batch)\n",
     "        dists = classifier.compute_distances_no_loops(X_validation_fold)\n",
     "        y_validation_pred = classifier.predict_labels(dists, k)\n",
     "        \n",
-    "        # Compute the accuracy.\n",
+    "        # Compute the accuracy\n",
     "        num_correct = np.count_nonzero(y_validation_pred == y_validation_fold)\n",
     "        accuracy = num_correct / y_validation_pred.shape[0]\n",
     "        \n",
     "        accuracies.append(accuracy)        \n",
     "        \n",
-    "    # Store the accuracies in the dictionary.\n",
+    "    # Store the accuracies in the dictionary\n",
     "    k_to_accuracies[k] = accuracies\n",
     "### END CODE HERE ###\n",
     "\n",
